--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
 
-<div id="console" class="strip-blank">
+<div id="console" class="strip-blank" style="background-color: black;">
 	<div id="yuelink"></div>
 	<div class="innerWrapper">
 		<div id="playCtrl">
