--- a/testapi.html
+++ b/testapi.html
@@ -16,8 +16,8 @@
     <div id="result">
     </div>
     <script>
-	//var apiurl = 'http://localhost/api/songs/600.json';
-	var apiurl = 'http://localhost/api/songs/159.json';
+	var apiurl = 'http://localhost:8080/api/nodes/84.json';
+	//var apiurl = 'http://localhost:8080/api/songs/442.json';
 	//alert(apiurl);
 	$.ajax({
 		type: 'GET',
