--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 					<div style="width:380px;text-align:left;padding-left:50px;">
 						<div class="song-title" style="font-size:16px"></div>
 						<div style="width:100%;height:15px"></div>
-						<div id="lyric-sum" style="font-size:14px;line-height:24px;"  class="lscroll"></div>
+						<div class="lscroll" id="lyric-sum" style="font-size:14px;line-height:24px;" ></div>
 					</div>
 				</div>
 			</td>
